Organize library folder & Iron out kinks with CustomTrajectoryGenerator